Fixed home page greeting spacing issue

--- a/portfolio/src/Components/PageSections/Home/Home.css
+++ b/portfolio/src/Components/PageSections/Home/Home.css
@@ -1,31 +1,45 @@
 .intro{
+    width: 100%;
     height: 105vh;
     text-align: center;
     background: rgb(9, 13, 15);
     margin-top: -3.5rem;
+   
     
 }
 
 .intro h1{
+    margin-top: auto;
     font-size: 4rem;
-    padding-top: 35rem;
     color: aqua;
+    position: relative;
+    top: 50%;
+    left: 50%;
+  
+    transform: translate(-50%, -50%);
 }
 
 .intro h3{
     font-size: 2rem;
     color: aqua;
+    position: relative;
+    top: 49%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
 
 @media(max-width: 768px){
     .intro h1{
-        padding-top: 20rem;
+        top:35%;
         font-size: 3rem;
+        transform: translate(-50%, -50%);
+        
     }
 
     .intro h3{
+       top: 35%;
         font-size: 1.5rem;
     }
 }
